tests/negative/reexport_private/main.sans
import "facade"
main() I {
  p(facade.helper())
  0
}
